<resources>
    <string name="app_name">Minor</string>
    <string name="email">Email</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Create_an_account">Create an account!</string>
    <string name="sign_up">SIGN UP</string>
    <string name="step_1">Step 1</string>
    <string name="student">Student</string>
    <string name="new_user">New User?</string>
    <string name="welcome">WELCOME</string>
    <string name="name">Name</string>
    <string name="department">Department</string>
    <string name="department_name">Department name</string>
    <string-array name="department_names">
        <item>Computer Science and Engg</item>
        <item>Information Technology</item>
        <item>Electrical Engg</item>
        <item>Electronics and communication</item>
    </string-array>
    <string name="department_selection_description">Select a department</string>
    <string name="department_n">Department</string>
    <string name="title_home">Home</string>
    <string name="title_classwork">Classwork</string>
    <string name="title_doubt">Doubt/Chat</string>
    <string name="classroom">Classroom</string>
    <string name="hey_anamika_welcome">Hey Anamika Welcome</string>
    <string name="syllabus">Syllabus</string>
    <string name="timetable">Timetable</string>
    <string name="resources">Resources</string>
    <!--    <string name="notes">Notes</string>-->
    <string name="leave_document">Leave Document</string>
    <string name="leave">Leave</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="suggestions">Suggestions</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="communicate">Communicate</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="notes">Notes</string>
    <string name="home">Home</string>
    <string name="your_name">Your Name</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close"> Close Navigation Drawer</string>
    <string name="open_drawer">opendrawer\n</string>
    <string name="close_drawer">closedrawer\n\n</string>
    <string name="dashboard_icon">dashboard</string>


</resources>