<?xml version="1.0" encoding="utf-8"?>

  <menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="single">
            <item android:id="@+id/home"
                android:icon="@drawable/home_icon"
                android:title="@string/home"/>
            <item android:id="@+id/notes"
                android:icon="@drawable/logout_icon"
                android:title="@string/notes"/>
        </group>
    <item android:title="@string/general">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/profile"
                    android:icon="@drawable/profileicon"
                    android:title="Profile"/>
                <item android:id="@+id/setting"
                    android:icon="@drawable/settingsicon"
                    android:title="@string/settings"/>
                <item android:id="@+id/logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/log_out"/>
            </group>
        </menu>

    </item>
    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/contact"
                    android:icon="@drawable/baseline_contacts_24"
                    android:title="@string/contact"/>
                <item android:id="@+id/suggestions"
                    android:icon="@drawable/suggestionsicon"
                    android:title="@string/suggestions"/>

                <item android:id="@+id/share"
                    android:icon="@drawable/shareicon"
                    android:title="@string/share_app"/>
                <item android:id="@+id/rate"
                    android:icon="@drawable/rateicon"
                    android:title="@string/rate_us"/>
            </group>

        </menu>
    </item>

    <item
        android:title="App version 1.1.0"
        >
    </item>

</menu>









