<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_student"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".com.example.minor.Models.FacultyActivity">
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/dashboard_navigation_view_student"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu">

    </com.google.android.material.navigation.NavigationView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottom_navigation">
            <RelativeLayout
                android:id="@+id/home_faculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <View
                    android:id="@+id/top_view"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/skyblue_background" />

                <GridLayout
                    android:id="@+id/gridLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="24dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginRight="24dp"

                    android:columnCount="2"
                    android:rowCount="3"
                    android:layout_below="@+id/top_view">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:layout_gravity="fill"
                        android:padding="12dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_classroom" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/classroom"
                                android:textColor="@color/brown"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_rowWeight="1"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_classroom" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/syllabus"
                                android:textColor="@color/brown"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_classroom" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/timetable"
                                android:textColor="@color/brown"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardviewleavestudent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_rowWeight="1"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_classroom" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/leave"
                                android:textColor="@color/brown"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_classroom" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/notes"
                                android:textColor="@color/brown"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_rowWeight="1"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">


                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:layout_gravity="center_horizontal"
                                android:src="@drawable/ic_classroom" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:text="@string/resources"
                                android:textColor="@color/brown"
                                android:textSize="18sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </GridLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp">

                    <ImageView
                        android:id="@+id/dashboard_icon"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="start"
                        android:layout_marginBottom="5dp"
                        android:contentDescription="@string/dashboard_icon"
                        android:src="@drawable/ic_dashboard_black_24dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:text="Hey Student,Welcome!"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="italic" />

                </LinearLayout>

            </RelativeLayout>
        </ScrollView>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/bottom_navigation" />
    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>

